<resources>
    <string name="app_name">Beetleware Task</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="sold_item">Sold Item</string>
    <string name="customer">Customer</string>
    <string name="sales">Sales</string>
    <string name="offer">offer</string>
    <string name="profile">Profile</string>
    <string name="Ok">Ok</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="search_item">Search Item</string>
    <string name="add_new_item">Add New Item</string>
    <string name="products">Products</string>
</resources>