<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/tbSwitch"
        layout="@layout/profile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp" />

    <LinearLayout
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_100sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/draw_orange2_bg"
        android:elevation="@dimen/_10sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:orientation="horizontal">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/avatar"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_margin="@dimen/_10sdp"
                android:src="@drawable/add"
                app:riv_oval="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="Mohamed Mahmoud"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Developer"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11sdp" />
            </LinearLayout>

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:src="@drawable/ic_edit" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_weight=".1"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textSize="@dimen/_18sdp"
                    android:textColor="@color/white"
                    android:text="200"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp"
                    android:text="@string/customer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
         <View
             android:background="@color/white"
             android:layout_width="@dimen/_1sdp"
             android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_weight=".1"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textSize="@dimen/_18sdp"
                    android:textColor="@color/white"
                    android:text="2000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp"
                    android:text="@string/sales"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <View

                android:background="@color/white"
                android:layout_width="@dimen/_1sdp"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_weight=".1"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textSize="@dimen/_18sdp"
                    android:textColor="@color/white"
                    android:text="200"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp"
                    android:text="@string/offer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <View

                android:background="@color/white"
                android:layout_width="@dimen/_1sdp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

<LinearLayout
    android:orientation="vertical"
    android:layout_marginTop="@dimen/_30sdp"
    android:layout_below="@+id/line"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:src="@drawable/ic_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_weight=".1"
        android:textSize="@dimen/_15sdp"
        android:text="@string/notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ImageView
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:src="@drawable/ic_arrow_orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>
    <View
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="#B6B5B5"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:src="@drawable/ic_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_weight=".1"
            android:textSize="@dimen/_15sdp"
            android:text="@string/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <ImageView
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:src="@drawable/ic_arrow_orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <View
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="#B6B5B5"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:src="@drawable/ic_logout" />
        <TextView
            android:layout_weight=".1"
            android:textSize="@dimen/_15sdp"
            android:text="@string/log_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <ImageView
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:src="@drawable/ic_arrow_orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>
</RelativeLayout>