<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/splash" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#fefdfb" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_280sdp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_35sdp"
        android:layout_marginEnd="@dimen/_35sdp"
        android:layout_marginBottom="@dimen/_70sdp"
        android:background="@drawable/draw_white_bg"
        android:elevation="@dimen/_10sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/triangle">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="center"
                android:text="Login"
                android:textColor="#fff"
                android:textSize="@dimen/_20sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/draw_white_bg"
            android:elevation="@dimen/_10sdp">

            <ImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/draw_orange_bg"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/ic_user" />

            <EditText
                android:lines="1"
                android:maxLines="1"
android:id="@+id/txtusername"
              android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:hint="@string/user_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/draw_white_bg" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/draw_white_bg"
            android:elevation="@dimen/_10sdp">

            <ImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/draw_orange_bg"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/ic_paasword" />

            <EditText

                android:lines="1"
                android:maxLines="1"
                android:id="@+id/textPassword"
                android:inputType="textPassword"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:hint="@string/password"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/draw_white_bg" />
        </LinearLayout>
        <Button
            android:id="@+id/login"
            android:paddingEnd="@dimen/_60sdp"
            android:drawablePadding="@dimen/_10sdp"
            android:gravity="end|center"
android:layout_gravity="end|center"
            android:drawableEnd="@drawable/ic_arrow_white"
android:textColor="@color/white"
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/draw_orange2_bg" />
    </LinearLayout>
</RelativeLayout>