<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue">
<LinearLayout
    android:layout_marginTop="@dimen/_5sdp"
    android:weightSum="3"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="MissingConstraints">
    <ImageView
        android:layout_weight="1.1"
        android:gravity="center"
        android:layout_gravity="center"
        android:src="@drawable/ic_title_bar_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_weight=".8"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="@dimen/_20sdp"
        android:textColor="@color/white"
        android:text="@string/home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ImageView
        android:layout_weight="1"
        android:gravity="center"
        android:layout_gravity="center"
        android:src="@drawable/ic_notifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:background="@drawable/draw_orange3_bg"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_60sdp"
        tools:ignore="RtlCompat">
<ImageView
android:layout_margin="@dimen/_5sdp"
    android:layout_gravity="center"
    android:padding="@dimen/_10sdp"
    android:background="@drawable/circle"
    android:src="@drawable/ic_sold_items"
    android:layout_width="@dimen/_40sdp"
    android:layout_height="@dimen/_40sdp"/>
        <View
            android:layout_margin="@dimen/_5sdp"
            android:background="@color/white"
            android:layout_width="2dp"
            android:layout_height="match_parent"
         />
        <LinearLayout
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
          android:layout_marginStart="@dimen/_5sdp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/sold_item"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="@dimen/_18sdp"
                android:textColor="@color/white"
                android:text="200"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:text="@string/sold_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/draw_orange3_bg"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_60sdp"
        tools:ignore="RtlCompat">
        <ImageView
            android:layout_margin="@dimen/_5sdp"
            android:layout_gravity="center"
            android:padding="@dimen/_10sdp"
            android:background="@drawable/circle"
            android:src="@drawable/ic_sold_items"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"/>
        <View
            android:layout_margin="@dimen/_5sdp"
            android:background="@color/white"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            />
        <LinearLayout
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/product_item"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="@dimen/_18sdp"
                android:textColor="@color/white"
                android:text="200"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:text="@string/products"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
</LinearLayout>